			CHANGELOG for KAME kit

$Id: CHANGELOG,v 1.940 2000/05/27 06:21:53 itojun Exp $

<200005>
Sat May 27 15:18:58 JST 2000  itojun@iijlab.net
	* kame/ping6/ping6.c: support -N option to probe NI group address at
	  ease.  for example:
	  % ping6 -N -I ne2 lychee
	  will probe NI group address for nodename "lychee", instead of the
	  address resolved for "lychee".

Sat May 27 14:01:29 JST 2000  itojun@iijlab.net
	* sys/netinet6/in6_ifattach.c: on in6_ifattach(), join NI group address
	  specified in icmp-name-lookup-04 and beyond.
	  TODO: cope with hostname change events, like sethostname(3).

Fri May 26 00:02:15 JST 2000  itojun@iijlab.net
	* netbsd/usr.bin/ftp/fetch.c: do not transmit scope identifier
	  on HTTP Host: directive.  disallow scoped address if the access is
	  via proxy.
	* openbsd/usr.bin/ftp/fetch.c: do not transmit scope identifier on
	  HTTP Host: directive.  correct Host: directive passing if the
	  access is via proxy.
	  TODO: disallow scoped address if the access is via proxy.

Thu May 25 23:16:01 JST 2000  itojun@iijlab.net
	* bsdi4/usr.bin/telnet/commands.c: use getaddrinfo to be scoped-address
	  friendly.

Thu May 25 21:56:47 JST 2000  itojun@iijlab.net
	* bsdi4/sys/i386/pci/if_exp.c: do not use interrupt for initializing
	  multicast filter.  this will make exp driver to be friendly with
	  IPv6 initialization sequence.  hints from netbsd fxp driver.

2000-05-25  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* bsdi4/sys/net/route.c (ifa_ifwithroute): reverted a KAME
	specific change introduced on 2000-02-25 (see this log file).
	The change was an ad-hoc hack and broke BSDI's original
	intention, so we've wanted to clarify the code.

2000-05-25  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/in6_ifattach.c (in6_ifattach,
	in6_ifattach_addaddr): use rtrequest1() when assigning IPv6
	addresses since this function is more conscious of interfaces than
	rtrequest() and is suitable for link-local addresses.
