@@ -1,8 +1,13 @@
 			CHANGELOG for KAME kit
 
-$Id: CHANGELOG,v 1.940 2000/05/27 06:21:53 itojun Exp $
+$Id: CHANGELOG,v 1.941 2000/05/27 10:12:42 itojun Exp $
 
 <200005>
+Sat May 27 19:07:58 JST 2000  itojun@iijlab.net
+	* sys/netinet6/icmp6.c: add net.inet6.icmp6.errppslimit sysctl MIB.
+	  it will let you limit ICMPv6 error messages by pps, not interval.
+	  still not sure what is the best way to perform rate limitation...
+
 Sat May 27 15:18:58 JST 2000  itojun@iijlab.net
 	* kame/ping6/ping6.c: support -N option to probe NI group address at
 	  ease.  for example:
